refactor a inicio juego y recursos
Co-Authored-By: Felipe Martin Santellán <144510415+FS-Grimm@users.noreply.github.com>
Co-Authored-By: laldonate96 <130720483+laldonate96@users.noreply.github.com>
Co-Authored-By: nachoorgeira <83682428+nachoorgeira@users.noreply.github.com>